# aria

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  00-overview.md  03-composition-patterns.md  04-context-manifests.md  06-naming-conventions.md  07-consistency-amplification.md  08-type-system.md  09-type-states.md  10-algebraic-types.md  11-type-compatibility.md  12-error-propagation.md  13-contract-versioning.md  14-human-ai-collaboration.md  16-ai-agent-roles.md  17-aru-lifecycle.md  19-multi-agent-infrastructure.md  20-manifest-schema.md  CLAUDE.md  README.md  TASKS.md
.github/: copilot-instructions.md
aria/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
aria/.github/workflows/: ci.yml  publish-runtime.yml  release.yml
aria/aria-build-prototype/: package-lock.json  package.json
aria/aria-build-prototype/fixtures/invalid-project/: l3-missing-health-contract.manifest.yaml  unknown-field.manifest.yaml
aria/aria-build-prototype/fixtures/valid-project/: auth.session.execute.loginFlow.manifest.yaml  auth.token.manifest.yaml  auth.token.validate.signature.manifest.yaml
aria/aria-build-prototype/src/: cli.js  config.js  manifest-loader.js  naming-checker.js  schema-validator.js  verb-vocabulary.js
aria/aria-build-prototype/test/: benchmark.test.js  integration.test.js
aria/aria-build-prototype/test/helpers/: generate-manifest.js
aria/crates/aria-build/: Cargo.toml
aria/crates/aria-build/src/: bundle_command.rs  check_command.rs  cli.rs  generate_command.rs  impact_command.rs  loader.rs  main.rs
aria/crates/aria-core/: Cargo.toml
aria/crates/aria-core/benches/: validation_benchmark.rs
aria/crates/aria-core/src/: canonical_hash.rs  checker.rs  db.rs  graph.rs  lib.rs  manifest.rs  span_map.rs
aria/crates/aria-core/src/checkers/: composition.rs  graph_checks.rs  mod.rs  naming.rs  schema.rs
aria/crates/aria-core/src/tests/: mod.rs
aria/crates/aria-lsp/: Cargo.toml
aria/crates/aria-lsp/src/: completions.rs  diagnostics.rs  hover.rs  main.rs
aria/schema/: aria-manifest.schema.json
docs/: 00-overview.md  01-abstraction-layers.md  02-atomic-responsibility-units.md  03-composition-patterns.md  04-context-manifests.md  05-semantic-graph.md  06-naming-conventions.md  07-consistency-amplification.md  08-type-system.md  09-type-states.md  10-algebraic-types.md  12-error-propagation.md  13-contract-versioning.md  14-human-ai-collaboration.md  15-task-decomposition.md  16-ai-agent-roles.md  17-aru-lifecycle.md  18-observability.md  19-multi-agent-infrastructure.md  20-manifest-schema.md  21-runtime-composition.md  22-domain-decomposition.md  23-test-infrastructure.md  TASKS.md
skills/: aria-primer.md  continue-context.md  (+1 more)
(+10 files in other folders)
