[workspace]
resolver = "2"
members = [
    "crates/aria-core",
    "crates/aria-build",
    "crates/aria-lsp",
]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Data structures
indexmap = { version = "2", features = ["serde"] }

# Parallel iteration
rayon = "1"

# JSON Schema validation
jsonschema = "0.26"

# Hashing
sha2 = "0.10"
hex = "0.4"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Incremental computation
salsa = "0.16"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
rstest = "0.23"
